# openviking-desktop

./: .gitignore  AGENTS.md  CHANGELOG.en.md  CHANGELOG.md  ISSUES.md  LICENSE  README.en.md  README.md  RELEASE_NOTES.en.md  RELEASE_NOTES.md  index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts  vitest.config.ts
.cargo/: config.toml
docs/: 2026-05-29-desktop-daemon-gui-design.md
docs/superpowers/plans/: 2026-06-04-python-env-self-install.md  2026-06-05-local-embedding-default-config.md  2026-06-05-playground-tray.md  2026-06-06-embedding-model-change-flow.md  2026-06-07-first-run-onboarding.md
docs/superpowers/specs/: 2026-06-03-resource-explorer-design.md  2026-06-04-python-env-self-install-design.md  2026-06-05-local-embedding-default-config.md  2026-06-05-playground-tray-design.md  (+2 more)
scripts/: allow-gatekeeper.sh  bundle-python.sh  download-gguf.sh  download-llama-cpp.sh  download-uv.sh  occupy-port-1933.py  occupy-port-1933.sh  rename-msi.ps1  reset-first-run.bat  reset-first-run.sh  reset-gatekeeper.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/Resources/: python
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  process.rs  python_env.rs  tray.rs
src/__tests__/: OnboardingWizard.test.tsx  detection.test.ts  setup.ts
src/components/: Icons.tsx  PortConflictDialog.tsx
src/lib/: api.ts  config-fields.ts  constants.ts  detection.ts  i18n.ts  path.ts  types.ts
src/locales/: en.json  zh.json
(+21 files in other folders)
